plugins {
    id 'java-library'
    id 'org.jetbrains.kotlin.jvm' version '1.9.10'
    id 'maven-publish'
    id 'signing'
}

version = "1.3.0"

jar {
    manifest {
        attributes 'Implementation-Title': 'Roku ECP Wrapper Kotlin',
                   'Implementation-Version': version
    }
}

java {
    withSourcesJar()
    withJavadocJar()
}

kotlin {
    jvmToolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

publishing {
    repositories {
        maven {
            name "sonatype"
            url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
            credentials {
                username = project.properties["sonatype_username"]
                password = project.properties["sonatype_password"]
            }
        }
    }
}

signing {
    sign publishing.publications
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'com.github.wseemann'
            artifactId = 'roku-ecp-wrapper-kotlin'
            version = version

            from components.java

            pom {
                name = 'Roku-ECP-Wrapper-Kotlin'
                description = 'Roku ECP Wrapper is a Kotlin based wrapper for the Roku External Control Protocol (ECP).'
                url = 'https://github.com/wseemann/Roku-ECP-Wrapper-Kotlin'
                packaging = 'jar'
                licenses {
                    license {
                        name = 'Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0'
                        distribution = 'repo'
                    }
                }
                developers {
                    developer {
                        id = 'wseemann'
                        name = 'William Seemann'
                    }
                }
                scm {
                    connection = 'scm:hg:https://github.com/wseemann/Roku-ECP-Wrapper-Kotlin'
                    developerConnection = 'scm:hg:https://github.com/wseemann/Roku-ECP-Wrapper-Kotlin'
                    url = 'https://github.com/wseemann/Roku-ECP-Wrapper-Kotlin'
                }
            }
        }
    }
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

dependencies {
    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'org.jdom:jdom2:2.0.6'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.13.1'
    testImplementation 'org.mockito:mockito-all:1.8.4'
    testImplementation 'junit:junit:4.13.1'
}
